--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
-JWT_Secret='somesuperhardstringtoguess'
+JWT_SECRET='somesuperhardstringtoguess'
 PORT=5000
 MONGO_URL="mongodb+srv://Business-Top:BusinessTOP2024@cluster0.8a1ap.mongodb.net/Business-Top?retryWrites=true&w=majority"
